Resolved spacing conflict

--- a/public/styles/partials/_header.scss
+++ b/public/styles/partials/_header.scss
@@ -26,6 +26,10 @@ header {
     margin: 3% 0 0 50%;
 }
 
+#user-search-form{
+  padding: 5px;
+}
+
 header * {
     display: inline-block;
 
